[gd_scene load_steps=2 format=3 uid="uid://cxecsqpalmkf4"]

[ext_resource type="Script" uid="uid://bdmypurkybven" path="res://scenes/objects/bullets/bullet/bullet.gd" id="1_rcpd2"]

[node name="Bullet" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_rcpd2")

[node name="AttackArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
debug_color = Color(0.485295, 0.435195, 1, 0.42)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true

[node name="Timers" type="Node" parent="."]

[node name="LifetimeTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
one_shot = true

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="timeout" from="Timers/LifetimeTimer" to="." method="_on_lifetime_timer_timeout"]
